change active tab

--- a/contents.html
+++ b/contents.html
@@ -54,7 +54,7 @@
                         </li>
                         |
                         <li>
-                            <a class="nav-link" id="feedback-tab" data-bs-toggle="tab" data-bs-target="#feedback"
+                            <a class="nav-link active" id="feedback-tab" data-bs-toggle="tab" data-bs-target="#feedback"
                                type="button"
                                role="tab" aria-controls="task" aria-selected="false">
                                 意　見
@@ -62,7 +62,7 @@
                         </li>
                         |
                         <li>
-                            <a class="nav-link active" id="blog-tab" data-bs-toggle="tab" data-bs-target="#blog"
+                            <a class="nav-link" id="blog-tab" data-bs-toggle="tab" data-bs-target="#blog"
                                type="button"
                                role="tab"
                                aria-controls="task" aria-selected="false">
@@ -73,7 +73,7 @@
                 </div>
             </nav>
             <div class="tab-content w-100" id="TabContent" style="background:thistle;">
-                <div class="tab-pane fade" id="feedback" role="tabpanel" aria-labelledby="feedback-tab" tabindex="0">
+                <div class="tab-pane fade show active" id="feedback" role="tabpanel" aria-labelledby="feedback-tab" tabindex="0">
                     <div class="inner-pane">
                         <form class="row info-form">
                             <div class="col-md-6">
@@ -122,7 +122,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="tab-pane fade show active" id="blog" role="tabpanel" aria-labelledby="blog-tab"
+                <div class="tab-pane fade" id="blog" role="tabpanel" aria-labelledby="blog-tab"
                      tabindex="0">
                     <div class="container-fluid">
                         <div class="row">
