--- a/contents.html
+++ b/contents.html
@@ -126,14 +126,6 @@
                      tabindex="0">
                     <div class="container-fluid">
                         <div class="row">
-                            <div class="col-5">
-
-                                <div class="row">
-                                    <p style="font-size: 150%">霊とか相談所</p>
-                                    <img src="src/images/portrait.png" class="image" alt=""/>
-                                </div>
-                                <div class="row"></div>
-                            </div>
                             <div class="col" style="display: grid; text-align: left">
                                 <div class="row"></div>
                                 <div class="row">
@@ -163,6 +155,7 @@
                                             既然身为师父的我表达了担心，那作为恋人的我应当证明我能够给你幸福，绝对不会让你后悔 <br>
                                             龙套 请多多指教啦
                                         </p>
+                                        <img src="src/images/blog1.png" class="image" alt=""/>
                                     </div>
                                     <div class="row blog">
                                         <p class="blog_title">2月21日 00:11</p>
@@ -176,6 +169,7 @@
                                             如果我没有使唤他去便利店的话，是不是一切都会不一样。 <br>
                                             现在只能把希望都寄托给医生了。
                                         </p>
+                                        <img src="src/images/blog2.png" class="image" alt=""/>
                                     </div>
                                     <div class="row blog">
                                         <p class="blog_title">2月28日 17:34</p>
@@ -196,6 +190,7 @@
                                             我有种想要把他吞下去的冲动 <br>
                                             这样说不定他就能在我身体某处继续活着
                                         </p>
+                                        <img src="src/images/blog3.png" class="image" alt=""/>
                                     </div>
                                     <div class="row blog">
                                         <p class="blog_title">3月9日 10:48</p>
@@ -212,6 +207,7 @@
                                             但是现在，我有了想要活下去的动力 <br>
                                             想要死前再看一看他的脸
                                         </p>
+                                        <img src="src/images/blog4.png" class="image" alt=""/>
                                     </div>
                                     <div class="row blog">
                                         <p class="blog_title">3月25日 19:21</p>
@@ -229,6 +225,7 @@
                                             不过委托既然接下来了就好好调查一下吧 <br>
                                             现在的我需要工作来塞满大脑
                                         </p>
+                                        <img src="src/images/blog5.png" class="image" alt=""/>
                                     </div>
                                     <div class="row blog">
                                         <p class="blog_title">4月5日 00:00</p>
@@ -239,8 +236,8 @@
                                             我马上就能再次见到龙套了 <br>
                                             从未如此激动过 <br>
                                             龙套 我——
-
                                         </p>
+                                        <img src="src/images/blog6.png" class="image" alt=""/>
                                     </div>
                                 </div>
                             </div>
