--- a/contents.html
+++ b/contents.html
@@ -46,7 +46,7 @@
                     <hr>
                     <ul class="nav nav-pills mb-auto">
                         <li class="nav-item" role="presentation">
-                            <a class="nav-link" id="task-tab" data-bs-toggle="tab" data-bs-target="#task"
+                            <a href="topics.html" class="nav-link" id="task-tab" data-bs-toggle="tab" data-bs-target="#task"
                                type="button"
                                role="tab" aria-controls="task" aria-selected="true">
                                 業　務
