-add cursed page

--- a/contents.html
+++ b/contents.html
@@ -33,10 +33,10 @@
     <div id="main">
         <div style="height: 100vh;width: 75vw;">
             <div style="height:150px; background:blue">
-            <div style="padding-top: 10px">
-                <input type="search" id="site-search" name="q">
-                <button>Search</button>
-            </div>
+                <div style="padding-top: 10px">
+                    <input type="search" id="site-search" name="q">
+                    <button>Search</button>
+                </div>
                 <svg style="fill:white" viewBox="-10 10 370 160">
                     <text style="fill:white;" class="svgStroke" y="30" x="20">myspace</text>
                 </svg>
@@ -46,7 +46,13 @@
                     <hr>
                     <ul class="nav nav-pills mb-auto">
                         <li class="nav-item" role="presentation">
-                            <a href="topics.html" class="nav-link" id="task-tab">
+                            <a href="main.html" class="nav-link">
+                                主 页
+                            </a>
+                        </li>
+                        |
+                        <li class="nav-item" role="presentation">
+                            <a href="topics.html" class="nav-link">
                                 業　務
                             </a>
                         </li>
@@ -71,7 +77,8 @@
                 </div>
             </nav>
             <div class="tab-content w-100" id="TabContent" style="background:thistle;">
-                <div class="tab-pane fade show active" id="feedback" role="tabpanel" aria-labelledby="feedback-tab" tabindex="0">
+                <div class="tab-pane fade show active" id="feedback" role="tabpanel" aria-labelledby="feedback-tab"
+                     tabindex="0">
                     <div class="inner-pane">
                         <form class="row info-form">
                             <div class="col-md-6">
@@ -150,7 +157,8 @@
                                             本来想作为一个师父对身为弟子的你表达质疑，但是我没能做到 <br>
                                             说到底我不过是胆怯，害怕自己剥夺了你获得幸福的可能性 <br>
                                             看着你因为紧张抖个不停的手，这种想法烟消云散了 <br>
-                                            既然身为师父的我表达了担心，那作为恋人的我应当证明我能够给你幸福，绝对不会让你后悔 <br>
+                                            既然身为师父的我表达了担心，那作为恋人的我应当证明我能够给你幸福，绝对不会让你后悔
+                                            <br>
                                             龙套 请多多指教啦
                                         </p>
                                         <img src="src/images/blog1.png" class="image" alt=""/>
@@ -159,8 +167,10 @@
                                         <p class="blog_title">2月21日 00:11</p>
                                         <p>
                                             医生说情况很不乐观。 <br>
-                                            人生中第一次签了病危通知书，不知道是幸运还是不幸，我是在场唯一能签名的龙套的伴侣 <br>
-                                            龙套躺在床上一动不动好像睡着了一样，但是医生说他被那样高速的车撞到且浑身都是复杂性的骨折的情况下却能保持人形已经是不可思议的奇迹了 <br>
+                                            人生中第一次签了病危通知书，不知道是幸运还是不幸，我是在场唯一能签名的龙套的伴侣
+                                            <br>
+                                            龙套躺在床上一动不动好像睡着了一样，但是医生说他被那样高速的车撞到且浑身都是复杂性的骨折的情况下却能保持人形已经是不可思议的奇迹了
+                                            <br>
                                             只有我明白，虽然他拥有超能力，但是依然是脆弱的人类 <br>
                                             卡车司机司机匍匐在地上，不停地道歉 <br>
                                             但我却不知道该回应些什么 <br>
@@ -174,7 +184,8 @@
                                         <p>
                                             龙套下葬了 <br>
                                             自从确认他死亡了之后的这段日子里我都过得恍恍惚惚 <br>
-                                            前后忙了三天，甚至联系龙套的父母都是律去做的，给芹泽，律还有花泽他们添了很多麻烦，真是抱歉啊 <br>
+                                            前后忙了三天，甚至联系龙套的父母都是律去做的，给芹泽，律还有花泽他们添了很多麻烦，真是抱歉啊
+                                            <br>
                                             在龙套葬礼这天我拼命打起精神了 <br>
                                             这是和龙套见最后一面的机会 <br>
                                             作为他的丈夫还有他的师父，不振作起来可不行啊 <br>
@@ -197,10 +208,12 @@
                                             一睁眼就看到芹泽担心的表情，我就知道，完蛋了 <br>
                                             我没能死掉 <br>
                                             小酒窝这个混蛋，因为感觉到不对就开了隐身模式偷偷溜到我家里来 <br>
-                                            多亏了他们及时赶到，我除了因为缺氧而昏厥半天以外，浑身没有任何不舒服的地方，感觉出奇得好 <br>
+                                            多亏了他们及时赶到，我除了因为缺氧而昏厥半天以外，浑身没有任何不舒服的地方，感觉出奇得好
+                                            <br>
                                             才不好 <br>
                                             这些人很碍眼，既然这是我的打算就不要来妨碍我 <br>
-                                            芹泽仿佛在提防重刑犯一样监视着我，明明我已经好好的在遗书上写清相谈所会留给你，到底有什么不满的 <br>
+                                            芹泽仿佛在提防重刑犯一样监视着我，明明我已经好好的在遗书上写清相谈所会留给你，到底有什么不满的
+                                            <br>
                                             我想和龙套相聚又有什么错 <br>
                                             但是现在，我有了想要活下去的动力 <br>
                                             想要死前再看一看他的脸
@@ -229,8 +242,12 @@
                                         <p class="blog_title">4月5日 00:00</p>
                                         <p>
                                             如果你能看到这篇blog，说明我已经到达了冥界 <br>
-                                            先说结果吧，这个网站是真的，虽然我并不知道它是为什么突然出现的，但是我明白它在呼唤着我 <br>
-                                            【网站的地址】 <br>
+                                            先说结果吧，这个网站是真的，虽然我并不知道它是为什么突然出现的，但是我明白它在呼唤着我
+                                            <br>
+                                            <a href="cursed.html" class="justify-content-md-center">
+                                                【https://mOHaWiMhIoAw.com】
+                                            </a>
+                                            <br>
                                             我马上就能再次见到龙套了 <br>
                                             从未如此激动过 <br>
                                             龙套 我——
