--- a/cursed.html
+++ b/cursed.html
@@ -48,15 +48,8 @@
             <img src="src/images/end2.png" class="image" alt=""/>
         </div>
     </div>
-    <a href="http://cn.web-counter.net" title="计数器">
-        <img src="http://www.web-counter.net/count_20091204.php?c=0n1zdtYeVxN" style="border:0;padding:0;margin:0;"
-             alt="计数器">
-    </a>
-    <br/>
-    <font size="1" face="Arial">
-        <a href="http://fr.web-counter.net" title="compteur de visite">compteur de visite</a>
-        <br/>
-        <a href="http://cn.web-counter.net" title="计数器">计数器</a></font>
+    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+    <span id="busuanzi_container_site_pv">总访问量<span id="busuanzi_value_site_pv"></span>次</span>
 </div>
 </body>
 </html>
