--- a/cursed.html
+++ b/cursed.html
@@ -40,16 +40,14 @@
                 <button id="submit">——</button>
                 <p id="reply"></p>
             </div>
-
-        </div>
-
-        <div id="end">
-            <img src="src/images/end1.png" class="image" alt=""/>
-            <img src="src/images/end2.png" class="image" alt=""/>
+            <div id="end">
+                <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
+                <span id="busuanzi_container_site_pv" style="color:gray">你是第<span id="busuanzi_value_site_pv"></span>个来到这里的</span>
+                <img src="src/images/end1.png" class="image" alt=""/>
+                <img src="src/images/end2.png" class="image" alt=""/>
+            </div>
         </div>
     </div>
-    <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
-    <span id="busuanzi_container_site_pv">总访问量<span id="busuanzi_value_site_pv"></span>次</span>
 </div>
 </body>
 </html>
