--- a/cursed.html
+++ b/cursed.html
@@ -33,6 +33,7 @@
 <div class="wrapper">
     <div id="main">
         <div class="inner">
+            <div id="overlay"></div>
             <div id="dialog">
             </div>
             <div id="chance">
