--- a/contents.html
+++ b/contents.html
@@ -30,7 +30,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <div id="main">
+    <div class="main">
         <div style="height: 100vh;width: 75vw;">
             <div style="height:150px; background:blue">
                 <div style="padding-top: 10px">
@@ -47,7 +47,7 @@
                     <ul class="nav nav-pills mb-auto">
                         <li class="nav-item" role="presentation">
                             <a href="main.html" class="nav-link">
-                                主 页
+                                HOME
                             </a>
                         </li>
                         |
