--- a/cursed.html
+++ b/cursed.html
@@ -31,11 +31,10 @@
 </head>
 <body id="cursed_page">
 <div class="wrapper">
-    <div id="main">
-        <div class="inner">
+    <div id="cusrsed_main" class="main">
+        <div class="inner" id="cusrsed_inner">
             <div id="overlay"></div>
-            <div id="dialog">
-            </div>
+            <div id="dialog"></div>
             <div id="chance">
                 <input type="search" id="answer" name="q">
                 <button id="submit">——</button>
