--- a/topics.html
+++ b/topics.html
@@ -30,7 +30,7 @@
 </head>
 <body id="topic_page">
 <div class="wrapper">
-    <div id="main">
+    <div class="main">
         <div class="container-fluid" style="padding-top:50px; overflow-y: scroll;height: 100vh;">
             <img src="src/images/ekubo1.gif" class="image" alt=""
                  style="position:absolute; right: 20px; bottom: 100px;"/>
