--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div class="wrapper">
-    <div id="main" style="height:100vh;">
+    <div class="main" style="height:100vh;">
         <div class="inner">
             <div style="display: flex; align-items: center;">
                 <img src="src/images/star.gif" class="image" alt=""/>
