--- a/topics.html
+++ b/topics.html
@@ -50,21 +50,21 @@
                         </defs>
                         <text style="fill:gold" stroke="url(#rainbow)" class="svgStroke" y="20" x="50%"
                               text-anchor="middle" dominant-baseline="middle">
-                            霊とか相談所 公式HP
+                            灵之类相谈所 官方网站
                         </text>
                     </svg>
                 </div>
                 <div class="row justify-content-md-center" style="">
                     <div class="col-5 task_card" style="background-color: #ffe6e6;">
-                        <svg style="stroke-width: 6px;  stroke: white;" viewBox="-20 10 370 160">
+                        <svg style="stroke-width: 6px;  stroke: white;" viewBox="-20 10 400 160">
                             <text style="font-size: 150%; " class="svgStroke" y="30" x="20">
-                                <tspan dy="1em" x="0">霊能界の新星、
+                                <tspan dy="1em" x="0">这是灵能界的新星，
                                     <tspan style="fill:green">霊幻</tspan>
                                     <tspan style="fill:purple">新隆</tspan>
-                                    です！！
+                                    ！！
                                 </tspan>
-                                <tspan dy="2em" x="0">一人で悩まずご相談ください！！</tspan>
-                                <tspan dy="2em" x="0">明朗会計、各種コースあり！！</tspan>
+                                <tspan dy="2em" x="0">不要独自一人烦恼，请和我相谈吧！！</tspan>
+                                <tspan dy="2em" x="0">明码标价，有各种套餐！！！</tspan>
                             </text>
                         </svg>
                     </div>
@@ -89,14 +89,14 @@
                                   dominant-baseline="middle">
                                 <tspan dy="1em" x="50%"
                                        style="font-size: 120%; stroke-width: 1px; stroke: white; text-shadow: 0 0 3px black;"
-                                       fill="url(#2color)">そのひとの声が聞きたい…
+                                       fill="url(#2color)">我想听听那个人的声音……
                                 </tspan>
                                 <tspan dy="2em" x="50%">
-                                    <tspan style="fill:red">『降霊の儀』</tspan>
-                                    とは
+                                    <tspan style="fill:red">『降灵仪式』</tspan>
+                                    是
                                 </tspan>
-                                <tspan dy="1em" x="50%">現代のイタコ</tspan>
-                                <tspan dy="1em" x="50%">遺産相続問題に決定打？</tspan>
+                                <tspan dy="1em" x="50%">现代的女巫</tspan>
+                                <tspan dy="1em" x="50%">财产继承问题的关键？！</tspan>
                             </text>
                         </svg>
 
@@ -117,12 +117,12 @@
                                   text-anchor="middle" dominant-baseline="middle">
                                 <tspan dy="1em" x="20%"
                                        style="stroke-width: 1px; stroke: white; text-shadow: 0 0 3px black;"
-                                       fill="lightcoral">その肩こり
+                                       fill="lightcoral">肩膀很重
                                 </tspan>
                                 <tspan dy="1em" x="50%">
-                                    『背後霊』が原因かも…
+                                    那可能是『背后灵』的原因……
                                 </tspan>
-                                <tspan dy="2em" x="50%" style="fill: lightblue; font-size: 70%; ">体調の不調、現代の病
+                                <tspan dy="2em" x="50%" style="fill: lightblue; font-size: 70%; ">气血不调、现代病
                                 </tspan>
                             </text>
                         </svg>
@@ -133,17 +133,17 @@
                                   dominant-baseline="middle">
                                 <tspan dy="1em" x="50%"
                                        style="font-size: 150%; stroke-width: 1px; stroke: white; text-shadow: 0 0 3px black;"
-                                       fill="orange"> 『都市伝説』の今
+                                       fill="orange">现今的『都市伝説』
                                 </tspan>
                                 <tspan dy="2em" x="50%"></tspan>
                                 <tspan dy="2em" x="50%">
-                                    <tspan style="fill:lightgreen" class="blink_text_green">おひきさん、</tspan>
-                                    花子さん
+                                    <tspan style="fill:lightgreen" class="blink_text_green">妃姬子、</tspan>
+                                    花子小姐、
                                 </tspan>
-                                <tspan dy="1em" x="50%">カシマレイコ、
-                                    <tspan style="fill:lightblue" class="blink_text_blue">赤レイン</tspan>
+                                <tspan dy="1em" x="50%">红色雨衣、
+                                    <tspan style="fill:lightblue" class="blink_text_blue">被诅咒的网站</tspan>
                                 </tspan>
-                                <tspan dy="1em" x="50%">ネットロア～現代の都市伝説</tspan>
+                                <tspan dy="1em" x="50%">网络上恐怖的~现代都市传说</tspan>
                             </text>
                         </svg>
                     </div>
