-add research part and comment part -revise contents with text box

--- a/topics.html
+++ b/topics.html
@@ -73,8 +73,17 @@
                     </div>
                 </div>
                 <div class="row justify-content-md-center">
-                    <div class="col-4">
-                        <img src="src/images/1.png" class="" alt=""/>
+                    <div class="col-4 task_card" style="background-color: lightblue;">
+                        <svg style="stroke-width: 3px;  stroke: white;" viewBox="-20 10 400 160">
+                            <text class="svgStroke" style="font-size: 120%;" y="20" x="50%"  text-anchor="middle"
+                                  dominant-baseline="middle">
+                                <tspan style="font-size: 130%; fill: red" dy="1em" x="50%">对『灵障』有烦恼的话</tspan>
+                                <tspan dy="2em" x="50%">也许会演变成邻里纠纷？！</tspan>
+                                <tspan dy="1.2em" x="50%" style="fill:gold">『扰人的声音』</tspan>
+                                <tspan dy="1.2em" x="50%">影响睡眠的<tspan style="fill:lightgreen">『鬼压床』</tspan></tspan>
+                                <tspan dy="1.2em" x="50%"><tspan style="fill:orange">『骚灵现象』</tspan>etc..</tspan>
+                            </text>
+                        </svg>
                     </div>
                     <div class="col-5 task_card blink_by" style="background: blue;">
                         <svg style="stroke-width: 1px; stroke: black;" viewBox="-20 10 370 130">
@@ -103,23 +112,37 @@
                     </div>
                 </div>
                 <div class="row justify-content-md-center">
-                    <div class="col-4">
-                        <img src="src/images/2.png" class="" alt=""/>
+                    <div class="col-4 task_card" style="background-color: lightgreen; margin: 12px;">
+                        <svg style="fill: royalblue" viewBox="-20 10 400 160">
+                            <text style="font-size: 120%;" y="20" x="50%"  text-anchor="middle"
+                                  dominant-baseline="middle">
+                                <tspan class="svgStroke" style="stroke-width: 2px;  stroke: black; font-size: 160%; fill: seagreen" dy="1em" x="50%">心灵写真鉴定</tspan>
+                                <tspan dy="2em" x="50%">其他有疑虑的物品</tspan>
+                                <tspan dy="2em" x="50%">也可以鉴定、除灵！</tspan>
+                            </text>
+                        </svg>
                     </div>
-                    <div class="col-4">
-                        <img src="src/images/3.png" class="" alt=""/>
+                    <div class="col-4 task_card" style="background-color: darkgray;">
+                        <svg viewBox="-20 10 400 160">
+                            <text class="svgStroke" style="font-size: 120%; fill:white" y="20" x="50%"  text-anchor="middle"
+                                  dominant-baseline="middle">
+                                <tspan style="font-size: 150%; fill:lightgray" dy="1em" x="50%">对于『凶宅』的相谈</tspan>
+                                <tspan dy="2em" x="50%">在引发<tspan style="fill:red">『心理上的瑕疵』</tspan>之前……</tspan>
+                                <tspan dy="1.5em" x="50%"><tspan style="fill:red">不动产纠纷</tspan>为了守护资产价值</tspan>
+                            </text>
+                        </svg>
                     </div>
                 </div>
                 <div class="row justify-content-md-center">
-                    <div class="col-5 task_card blink_rainbow" style="background: peachpuff;">
+                    <div class="col-5 task_card blink_rainbow" style="background: peachpuff;  margin: 2px;">
                         <svg style="stroke-width: 1px; stroke: black;" viewBox="-20 10 370 130">
                             <text style="fill: red; font-size: 150%; " class="svgStroke" y="20" x="50%"
                                   text-anchor="middle" dominant-baseline="middle">
                                 <tspan dy="1em" x="20%"
                                        style="stroke-width: 1px; stroke: white; text-shadow: 0 0 3px black;"
-                                       fill="lightcoral">肩膀很重
+                                       fill="lightcoral">②肩膀很重
                                 </tspan>
-                                <tspan dy="1em" x="50%">
+                                <tspan dy="1.5em" x="50%">
                                     那可能是『背后灵』的原因……
                                 </tspan>
                                 <tspan dy="2em" x="50%" style="fill: lightblue; font-size: 70%; ">气血不调、现代病
@@ -155,7 +178,7 @@
 
             </div>
             <div class="row-7 justify-content-md-center">
-                <img src="src/images/course.png" class="" alt=""/>
+                <img src="src/images/Bcourse.png" class="" alt=""/>
 
             </div>
             <div class="row-7 justify-content-md-center">
